--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.HanziCounter"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".TextActivity"
             android:exported="true"
             android:theme="@style/Theme.HanziCounter">
             <intent-filter>
